Implemented Amazon Cognito
